# iced

./: Cargo.toml
beacon/: Cargo.toml
benches/: wgpu.rs
core/: Cargo.toml
core/src/: background.rs  font.rs  gradient.rs  layout.rs  length.rs  rectangle.rs  renderer.rs  text.rs  transformation.rs
core/src/layout/: flex.rs
core/src/mouse/: click.rs
core/src/renderer/: null.rs
core/src/text/: editor.rs  paragraph.rs  rich_editor.rs
core/src/text/rich_editor/: paragraph.rs  span.rs
core/src/widget/: text.rs
core/src/widget/operation/: focusable.rs
debug/: Cargo.toml
devtools/: Cargo.toml
examples/color_palette/src/: main.rs
examples/editor/src/: main.rs
examples/event_loop/: Cargo.toml
examples/event_loop/src/: main.rs
examples/font_features/: Cargo.toml
examples/font_features/src/: main.rs
examples/font_picker/: Cargo.toml
examples/font_picker/src/: main.rs
examples/game_of_life/src/: main.rs
examples/gradient/src/: main.rs
examples/letter_spacing/src/: main.rs
examples/typography/: Cargo.toml
examples/typography/src/: main.rs
futures/: Cargo.toml
graphics/: Cargo.toml
graphics/src/: gradient.rs  layer.rs  lib.rs  rich.rs  text.rs
graphics/src/geometry/: fill.rs  text.rs
graphics/src/rich/: editor.rs
graphics/src/text/: cache.rs  editor.rs  paragraph.rs
highlighter/: Cargo.toml
program/: Cargo.toml
renderer/: Cargo.toml
renderer/src/: fallback.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: font.rs  lib.rs  task.rs
src/: advanced.rs  lib.rs
test/src/: emulator.rs
tests/: layout.rs
tiny_skia/src/: engine.rs  geometry.rs  layer.rs  lib.rs  text.rs
vello/: Cargo.toml
vello/src/: engine.rs  geometry.rs  layer.rs  lib.rs  settings.rs  text.rs  text_cache.rs  window.rs
vello/src/text/: context.rs  editor.rs
vello/src/window/: compositor.rs
wgpu/: Cargo.toml
wgpu/src/: geometry.rs  image.rs  layer.rs  lib.rs  text.rs  triangle.rs
wgpu/src/quad/: gradient.rs
wgpu/src/shader/quad/: gradient.wgsl
wgpu/src/shader/triangle/: gradient.wgsl
widget/: Cargo.toml
widget/src/: action.rs  checkbox.rs  column.rs  combo_box.rs  container.rs  grid.rs  lib.rs  markdown.rs  pick_list.rs  radio.rs  scrollable.rs  svg.rs  table.rs  text_editor.rs  text_input.rs  toggler.rs
widget/src/image/: viewer.rs
widget/src/keyed/: column.rs
widget/src/overlay/: menu.rs
widget/src/text/: rich.rs
winit/: Cargo.toml
winit/src/: conversion.rs  lib.rs  window.rs
